// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Analysis Builder render 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <section
      aria-labelledby=":r0:"
      class="event-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r0:"
          >
            Analyze
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Event"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            data-html2canvas-ignore="true"
            title="Add Event"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Event Analysis Builder render with filters & breakdowns 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <section
      aria-labelledby=":r1:"
      class="event-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r1:"
          >
            Analyze
          </span>
        </h3>
      </div>
      <div
        class="event-container event-list mt-3"
      >
        <div
          aria-label="Article Views"
          class="align-items-center condition-chip d-flex rounded-lg"
          role="group"
          tabindex="0"
        >
          <div
            class="align-items-center condition-chip-content d-flex flex-grow-1 px-2 py-2"
          >
            <span
              class="sticker condition-sticker flex-shrink-0 mr-2 sticker-primary"
            >
              <span
                class="sticker-overlay"
              >
                <svg
                  class="lexicon-icon lexicon-icon-click"
                  role="presentation"
                >
                  <use
                    href="#click"
                  />
                </svg>
              </span>
            </span>
            <span
              class="condition-chip-text d-flex flex-column text-break"
            >
              <span
                class="d-block"
              >
                <span
                  class="text-3 font-weight-semi-bold"
                >
                  Article Views
                </span>
              </span>
            </span>
          </div>
          <button
            aria-label="Remove Article Views"
            class="condition-chip-remove flex-shrink-0 mr-1 btn btn-monospaced btn-sm btn-unstyled"
            data-chip-control="true"
            data-html2canvas-ignore="true"
            tabindex="-1"
            title="Remove Article Views"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times-circle"
              role="presentation"
            >
              <use
                href="#times-circle"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
    <section
      aria-labelledby=":r2:"
      class="attribute-breakdown-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r2:"
          >
            Breakdown By
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Breakdown"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            data-html2canvas-ignore="true"
            title="Add Breakdown"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
    <section
      aria-labelledby=":r3:"
      class="attribute-filter-section-root border-bottom px-4 py-3"
      tabindex="-1"
    >
      <div
        class="align-items-center d-flex justify-content-between"
      >
        <h3
          class="text-8 font-weight-normal"
        >
          <span
            class="text-4"
            id=":r3:"
          >
            Filter By
          </span>
        </h3>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add Filter"
            class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
            data-html2canvas-ignore="true"
            title="Add Filter"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;
